# tap_scripts

./: .env  .gitignore  WAO_farms_data.xlsx  colors.py  copy.py  half_WAO.py  install_objects.ps1  main.py  requirements.txt  tap_WAO_farms.py  tap_WAO_farms_lenovo.py  times.py
data/: WAO_farms_data.xlsx  game_objects.json  objects.json  objects_data.json  regions.json
game_objects/: Cargo.toml  build.sh  game_objects.pyi  pyproject.toml
game_objects/src/: adb.rs  lib.rs  paths.rs  screen.rs
image_comparer/: Cargo.toml
image_comparer/src/: adb.rs  lib.rs  paths.rs
my_packages/: __init__.py  adb_config.py  game_actions.py  poco_coordinates.py
my_packages/adb_helpers/: adb_config.py  game_actions.py
my_packages/adb_tools/: adb_actions.py  adb_config.py  adb_device.py  console_runner.py  device_actions.py  device_config.py  game_actions.py  poco_coordinates.py
my_packages/core/: adb_console.py  adb_device.py  adb_tools.py  adb_utils.py
my_packages/data/: WAO_farms_data.xlsx  accounts.py  farms.py  float_coordinates.py  game_objects.json  (+6 more)
screen_objects/: Cargo.toml  pyproject.toml  screen_objects.pyi
screen_objects/src/: adb.rs  image_analyzer.rs  lib.rs  paths.rs  screen.rs
scripts/: action.py  add.py  colors.py  comp.py  compare_blue.py  crop_screencap.py  find.py  lord.py  lord_skills.py  make_screen.py  measure.py  object.py  regions.py  run.py  sample.py  screencap.py  search_position.py
src/: actions.py  device.py  main.py  objects.py  paths.py  status.py  strategies.py  utils.py
tests/: test_game_objects.py  test_path.py  test_samples.py
(+49 files in other folders)
