[package]
name = "game_objects"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "game_objects"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.9"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pyo3 = "0.28.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
